--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -30,7 +30,7 @@ In this file:
 // Put anything you want here
 
 h1 {
-  text-shadow: 0 0 5px rgba(black, 0.2);
+  text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
 }
 
 h2 {
@@ -415,15 +415,14 @@ ul li {
   .t-row {
     width: 100%;
     display: flex;
-
     &.t-header {
-      font-weight: 700;
       font-size: 1rem;
       text-transform: uppercase;
       .t-cell {
         background: $primary !important;
         color: white !important;
         padding: 0.5rem;
+        font-weight: 700 !important;
         &:not(:first-child) {
           border-left: 1px solid rgba($cream, 0.5);
         }
@@ -547,6 +546,21 @@ ul li {
   > nav {
     @media (max-width: 1199px) {
       padding-top: 1px !important;
+    }
+  }
+}
+
+#mission-and-vision {
+  ul {
+    list-style: none;
+    padding-left: 0;
+    li {
+      margin: 1.75em 0 1em;
+      strong {
+        display: inline-block;
+        width: 100%;
+        margin-bottom: 0.25em;
+      }
     }
   }
 }
