--- a/scss/_a-global-variables.scss
+++ b/scss/_a-global-variables.scss
@@ -241,13 +241,15 @@ $sizes: (
 ////////////////////////////////////////
 
 // Font Awesome icons
-
 $font-awesome: 'Font Awesome 5 Free';
 
 // Below is Bootstrap's default $font-family-sans-serif variable
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
-  'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
+$font-family-sans-serif: -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue',
+  Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
+
+  // HAD TO REMOVE BlinkMacSystemFont from stack because of a bug in Chrome 81
 
 // Font sizes
 // Instead of manipulation Bootstrap Default variables,
