--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -257,164 +257,6 @@ ul li {
   }
 }
 
-#quiz {
-  margin-top: 2rem;
-  padding: 2rem 1.5rem;
-  // border-top: 1px solid black;
-  background-color: $cream;
-  text-align: center;
-  > div {
-    display: none;
-  }
-  .question-wrap {
-    border-bottom: 1px solid rgba(black, 0.15);
-    padding-bottom: 2rem;
-    img {
-      width: 150px;
-      height: 150px;
-      margin-top: -1.5rem;
-    }
-    .question {
-      font-size: 2.5rem;
-      line-height: 1.125;
-      margin-bottom: 1em;
-    }
-    .description {
-      margin-top: -1.5em;
-      margin-bottom: 2em;
-      font-style: italic;
-    }
-    .answer {
-      @extend %button;
-      user-select: none;
-    }
-  }
-  #results {
-    > div {
-      display: none;
-    }
-    .headline {
-      font-size: 2.5rem;
-      line-height: 1.125;
-      margin-bottom: 0.75em;
-      // padding-bottom: 0.75em;
-      // border-bottom: 1px solid darken($light, 20%);
-      .legality {
-        &:before {
-          content: 'is probably ';
-        }
-        &:after {
-          content: 'legal';
-          color: $green;
-          font-style: italic;
-        }
-        &.illegal:after {
-          content: 'illegal';
-          color: $red;
-        }
-        &.unknown {
-          &:before {
-            content: 'might be ';
-            color: $orange;
-          }
-          &:after {
-            content: 'illegal';
-            color: $orange;
-          }
-        }
-      }
-    }
-    .gt30-description {
-      display: none;
-      margin-bottom: 1.5em;
-    }
-    .details {
-      .description {
-        font-weight: 700;
-        margin-bottom: 1.5em;
-        background: darken($cream, 5%);
-        padding: 0.5em;
-      }
-      ul {
-        text-align: left;
-        list-style: none;
-        position: relative;
-        padding-left: 2.75rem;
-        li {
-          font-size: 1.5rem;
-          line-height: 1.25;
-          color: $green;
-          font-weight: 600;
-          &:before {
-            content: '✓';
-            position: absolute;
-            left: 0;
-            width: 1.5em;
-            height: 1.5em;
-            border: 2px solid currentColor;
-            border-radius: 50%;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-          &.illegal {
-            color: $red;
-            &:before {
-              content: '✗';
-            }
-          }
-          .if-unknown {
-            display: none;
-          }
-          &.unknown {
-            color: $orange;
-            &:before {
-              content: '!';
-            }
-            .if-unknown {
-              display: block;
-              margin-top: 0.5em;
-              margin-bottom: 1.5em;
-              font-style: normal;
-              font-weight: 600;
-            }
-          }
-          .subtext {
-            font-size: 1.125rem;
-            font-style: italic;
-            font-weight: 400;
-            line-height: 1.5;
-            margin-top: 0.5em;
-            color: $gray-700;
-          }
-        }
-      }
-    }
-    .read-more {
-      display: block;
-      margin-top: 3em;
-      padding: 1em 0 1.5em;
-      border-bottom: 1px solid rgba(black, 0.25);
-      border-top: 1px solid rgba(black, 0.05);
-      font-weight: 600;
-    }
-  }
-  #reset {
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    color: rgba(black, 0.4);
-    margin-top: 1em;
-    cursor: pointer;
-    transition: color 0.5s ease;
-    &:hover {
-      color: $secondary;
-    }
-  }
-}
-
 .list-group-item {
   &.active {
     background: $black;
@@ -577,6 +419,181 @@ ul li {
         width: 100%;
         margin-bottom: 0.25em;
       }
+    }
+  }
+}
+
+// QUIZ ///////////////////////////////////////////////
+
+#quiz {
+  margin-top: 2rem;
+  padding: 2rem 1.5rem;
+  background-color: $cream;
+  text-align: center;
+  > div {
+    display: none;
+  }
+  .question-wrap {
+    border-bottom: 1px solid rgba(black, 0.15);
+    padding-bottom: 2rem;
+    img {
+      width: 150px;
+      height: 150px;
+      margin-top: -1.5rem;
+    }
+    .question {
+      font-size: 2.5rem;
+      line-height: 1.125;
+      margin-bottom: 1em;
+    }
+    .description {
+      margin-top: -1.5em;
+      margin-bottom: 2em;
+      font-style: italic;
+    }
+    .answer {
+      @extend %button;
+      user-select: none;
+    }
+  }
+  #results {
+    > div {
+      display: none;
+    }
+    .headline {
+      font-size: 2.5rem;
+      line-height: 1.125;
+      margin-bottom: 0.75em;
+      .legality {
+        .probably {
+          display: inline;
+        }
+        .maybe {
+          display: none;
+          color: $orange;
+        }
+        .l {
+          display: inline;
+          color: $green;
+          font-style: italic;
+        }
+        .i {
+          display: none;
+          color: $red;
+          font-style: italic;
+        }
+        &.illegal {
+          .l {
+            display: none;
+          }
+          .i {
+            display: inline;
+          }
+        }
+        &.unknown {
+          .probably {
+            display: none;
+          }
+          .maybe {
+            display: inline;
+          }
+          .l {
+            display: none;
+          }
+          .i {
+            display: inline;
+            color: $orange;
+          }
+        }
+      }
+    }
+    .gt30-description {
+      display: none;
+      margin-bottom: 1.5em;
+    }
+    .details {
+      .description {
+        font-weight: 700;
+        margin-bottom: 1.5em;
+        background: darken($cream, 5%);
+        padding: 0.5em;
+      }
+      ul {
+        text-align: left;
+        list-style: none;
+        position: relative;
+        padding-left: 2.75rem;
+        li {
+          font-size: 1.5rem;
+          line-height: 1.25;
+          color: $green;
+          font-weight: 600;
+          &:before {
+            content: '✓';
+            position: absolute;
+            left: 0;
+            width: 1.5em;
+            height: 1.5em;
+            border: 2px solid currentColor;
+            border-radius: 50%;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+          &.illegal {
+            color: $red;
+            &:before {
+              content: '✗';
+            }
+          }
+          .if-unknown {
+            display: none;
+          }
+          &.unknown {
+            color: $orange;
+            &:before {
+              content: '!';
+            }
+            .if-unknown {
+              display: block;
+              margin-top: 0.5em;
+              margin-bottom: 1.5em;
+              font-style: normal;
+              font-weight: 600;
+            }
+          }
+          .subtext {
+            font-size: 1.125rem;
+            font-style: italic;
+            font-weight: 400;
+            line-height: 1.5;
+            margin-top: 0.5em;
+            color: $gray-700;
+          }
+        }
+      }
+    }
+    .read-more {
+      display: block;
+      margin-top: 3em;
+      padding: 1em 0 1.5em;
+      border-bottom: 1px solid rgba(black, 0.25);
+      border-top: 1px solid rgba(black, 0.05);
+      font-weight: 600;
+    }
+  }
+  #reset {
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    color: rgba(black, 0.4);
+    margin-top: 1em;
+    cursor: pointer;
+    transition: color 0.5s ease;
+    &:hover {
+      color: $secondary;
     }
   }
 }
