--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -48,6 +48,10 @@ a {
   }
 }
 
+p {
+  font-size: 1.125rem;
+}
+
 .wide {
   text-align: center;
 }
@@ -180,7 +184,9 @@ ul li {
 
 #contact {
   h6 {
-    margin-bottom: 2em;
+    margin-bottom: 1.333em;
+    font-size: 1.125rem;
+    font-weight: 400;
   }
 }
 
