--- a/css/theme.css
+++ b/css/theme.css
@@ -12925,6 +12925,10 @@ ul li {
   display: none;
 }
 
+#quiz #results a {
+  text-decoration: underline;
+}
+
 #quiz #results .headline {
   font-size: 2.5rem;
   line-height: 1.125;
