--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -470,6 +470,9 @@ ul li {
     > div {
       display: none;
     }
+    a {
+      text-decoration: underline;
+    }
     .headline {
       font-size: 2.5rem;
       line-height: 1.125;
