--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -438,6 +438,17 @@ ul li {
   }
 }
 
+#language-access {
+  h5 {
+    margin-top: 1.5em;
+  }
+  ul {
+    li {
+      margin-bottom: 0;
+    }
+  }
+}
+
 // QUIZ ///////////////////////////////////////////////
 
 #quiz {
